@@ -11,6 +11,7 @@
 - Add enum for RADIUS codes.
 - Make "call_" prefix implict in CSTAT() macro.
 - Fix some format string problems.
+- Fix "clear counters".
 
 * Fri Dec 17 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.13
 - Better cluster master collision resolution: keep a counter of state
